--- a/02multiDataSource/multiDataSource/pom.xml
+++ b/02multiDataSource/multiDataSource/pom.xml
@@ -138,7 +138,12 @@
 			<artifactId>okhttp</artifactId>
 			<version>3.3.1</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>1.8.16.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
