--- a/myWeb/web/WEB-INF/web.xml
+++ b/myWeb/web/WEB-INF/web.xml
@@ -3,4 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <!--配置一个servlet-->
+    <servlet>
+        <servlet-name>demo01</servlet-name>
+        <servlet-class>cn.mingyang.web.servlet.ServletDemo01</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>demo01</servlet-name>
+        <url-pattern>/demo</url-pattern>
+    </servlet-mapping>
 </web-app>
