--- a/myWeb/web/WEB-INF/web.xml
+++ b/myWeb/web/WEB-INF/web.xml
@@ -5,22 +5,32 @@
          version="4.0">
 
     <!--配置一个servlet-->
-    <servlet>
+    <!--<servlet>
         <servlet-name>demo01</servlet-name>
-        <servlet-class>cn.mingyang.web.servlet.ServletDemo01</servlet-class>
+        <servlet-class>cn.mingyang.web.w01_servlet.ServletDemo01</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>demo01</servlet-name>
         <url-pattern>/demo</url-pattern>
     </servlet-mapping>
 
-    <!--配置一个servlet-->
+    &lt;!&ndash;配置一个servlet&ndash;&gt;
     <servlet>
         <servlet-name>demo02</servlet-name>
-        <servlet-class>cn.mingyang.web.servlet.ServletDemo02</servlet-class>
+        <servlet-class>cn.mingyang.web.w01_servlet.ServletDemo02</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>demo02</servlet-name>
         <url-pattern>/demo2</url-pattern>
     </servlet-mapping>
+
+    &lt;!&ndash;配置一个servlet&ndash;&gt;
+    <servlet>
+        <servlet-name>demo05</servlet-name>
+        <servlet-class>cn.mingyang.web.w01_servlet.ServletDemo05</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>demo05</servlet-name>
+        <url-pattern>/demo5</url-pattern>
+    </servlet-mapping>-->
 </web-app>
