--- a/myWeb/web/WEB-INF/web.xml
+++ b/myWeb/web/WEB-INF/web.xml
@@ -33,4 +33,15 @@
         <servlet-name>demo05</servlet-name>
         <url-pattern>/demo5</url-pattern>
     </servlet-mapping>-->
+
+    <!--配置一个过滤器-->
+    <!--<filter>
+        <filter-name>demo01_filter</filter-name>
+        <filter-class>cn.mingyang.web.w09_filter.demo01_filter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>demo01_filter</filter-name>
+        &lt;!&ndash;拦截的路径&ndash;&gt;
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>-->
 </web-app>
